--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2"
+	}
 }
